# raftcpp

./: CMakeLists.txt  README.md
src/: noncopyable.h  objfactory.h  raft.cpp  raft.h  thread_pool.h
test/: test.cpp  thread_pool_test  thread_pool_test.cpp
